--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -18,9 +18,9 @@
                             <form asp-action="Login">
                                 <div asp-asp-validation-summary="ModelOnly" class="text-danger"></div>
                                 <div class="form-group form-outline form-white mb-4">
-                                    <label asp-for="Username" class="form-label h4"> </label>
-                                    <input asp-for="Username" class="form-control form-control-lg bg-color-input"/>
-                                    <span asp-validation-for="Username" class="text-danger">  </span>
+                                    <label asp-for="UserName" class="form-label h4"> </label>
+                                    <input asp-for="UserName" class="form-control form-control-lg bg-color-input"/>
+                                    <span asp-validation-for="UserName" class="text-danger">  </span>
                                 </div>
 
                                 <div class="form-group form-outline form-white mb-4">
