--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
                             }
                             @if (!string.IsNullOrEmpty(Model.ImageBase64))
                             {
-                                <img src="data:image/png;base64,@Model.ImageBase64" alt="Profile Image" />
+                              <img src="data:image/png;base64,@Model.ImageBase64" alt="Profile Image" class="img-fluid"/>
                             }
                         </div>
                     </div>
